[package]
name = "pancakes"
version = "0.1.0"
edition = "2021"
authors = ["_@kevinrodriguez.io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.133"
serde = "1.0.133"
anyhow = "1.0.52"
rand = "0.8.4"
image = "0.23.14"
